<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_title"
        android:textSize="14sp"
        android:textColor="#99000000"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_title_empty"
        android:textSize="16sp"
        android:textColor="#DE000000"
        android:textColorHint="#61000000"
        android:background="@drawable/bg_edit_text"
        android:padding="10dp"
        android:maxLines="1"
        android:elevation="1dp"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_content"
        android:textSize="14sp"
        android:textColor="#99000000"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_input_empty"
        android:textSize="14sp"
        android:textColor="#DE000000"
        android:textColorHint="#61000000"
        android:background="@drawable/bg_edit_text"
        android:padding="10dp"
        android:gravity="top"
        android:minLines="3"
        android:maxLines="6"
        android:elevation="1dp"
        android:scrollbars="vertical"
        android:inputType="textMultiLine|textCapSentences"/>

</LinearLayout> 